--- a/pom.xml
+++ b/pom.xml
@@ -43,13 +43,11 @@
   </developers>
 
   <distributionManagement>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <name>Sonatype Snapshots</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-      <uniqueVersion>true</uniqueVersion>
-      <layout>default</layout>
-    </snapshotRepository>
+    <snapshotRepository> 
+        <id>igrafx.snapshots</id> 
+        <name>Internal Snapshot Repository</name> 
+        <url>http://themaven:8090/repository/snapshots/</url> 
+     </snapshotRepository> 
   </distributionManagement>
 
   <dependencyManagement>
@@ -82,12 +80,12 @@
       <dependency>
         <groupId>com.microsoft.azure</groupId>
         <artifactId>azure-client-runtime</artifactId>
-        <version>1.6.3-SNAPSHOT</version>
+        <version>1.6.2</version>
       </dependency>
       <dependency>
         <groupId>com.microsoft.azure</groupId>
         <artifactId>azure-client-authentication</artifactId>
-        <version>1.6.3-SNAPSHOT</version>
+        <version>1.6.2</version>
       </dependency>
       <dependency>
         <groupId>com.google.guava</groupId>
